--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css" >
+    <link rel="stylesheet" href="./assets/style.css" >
     <title>Michael Edeza-Salvant</title>
 </head>
 <body>
@@ -25,22 +25,23 @@
             </ul>
         </nav>
     </header>
-    <section class="hero"></section>
-    <section class="about-me">
-        <div class="">
+    <section class="hero">
+    </section>
+    <section class="about-me, section-title">
+        <div class="am-title">
             <h2>About Me</h2>
         </div>
-        <div class="text-box">
+        <div class="about-me-bio">
             <h3>Michael Edeza-Salvant</h3>
                 <p>
                     Hi! I currently work as a Kindergarten Teacher in Oakland, California. At this time I am learning the fundamentals of becoming a fullstack web-designer learning skills in html and css. Alongside many other languages that will prepare me for work in the future. Thanks for stopping by!
                 </p>
         </div>
-        <div class="about-me-img">
-            <img src="" alt="" />
-        </div>
-    </section>
-    <section class="the-work">
+        <!-- <div>
+            <img src="./assets/images/IMG_5209.JPG" alt="Michael sitting in front of a statue" />
+        </div> -->
+        </section>
+    <section class="the-work, section-title">
         <div class="">
             <h2>The Work</h2>
         </div>
@@ -52,14 +53,14 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque aliquid quas voluptatibus asperiores nostrum expedita veritatis nemo maiores blanditiis consequuntur! Assumenda magnam doloribus autem hic est modi delectus veritatis? Exercitationem.</p>
                 </div>
             </article>
-            <article>
+            <article class="project">
                 <div class="app-bio">
                     <h3>Robot Gladiators</h3>
                     <h4>Languge</h4>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil praesentium cumque, fugiat expedita iure qui est ab. Consequuntur officiis, ratione nulla fugit aliquam laudantium, quasi sit id quaerat doloremque error?</p>
                 </div>
             </article>
-            <article>
+            <article class="project">
                 <div class="app-bio">
                     <h3>Project Name-3</h3>
                     <h4>Languge</h4>
@@ -68,7 +69,7 @@
             </article>
         </div>
     </section>
-    <section class="contact">
+    <section class="contact, section-title">
         <div>
             <h2>Reach Me</h2>
         </div>
