--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             </ul>
         </nav>
     </header>
-    <section class="hero">
-    </section>
+
+    <div class="hero"></div>
+
     <section class="about-me, section-title">
         <div class="am-title">
             <h2>About Me</h2>
@@ -37,8 +38,8 @@
                     Hi! I currently work as a Kindergarten Teacher in Oakland, California. At this time I am learning the fundamentals of becoming a fullstack web-designer learning skills in html and css. Alongside many other languages that will prepare me for work in the future. Thanks for stopping by!
                 </p>
         </div>
-        <!-- <div>
-            <img src="./assets/images/IMG_5209.JPG" alt="Michael sitting in front of a statue" />
+        <!-- <div class="bio-img">
+            <img src="./assets/images/FullSizeRender.jpg" alt="Michael wearing a Yankees hat" />
         </div> -->
         </section>
     <section class="the-work, section-title">
@@ -76,19 +77,19 @@
         <div class="contact-info">
             <h3>Michael Edeza-Salvant</h3>
             <address>
-                Phone: 999.999.9999
+                Phone: 999.999.9999 <br/> <br/>
                 Email: <a href="mailto:edezamichael@gmail.com">edezamichael@gmail.com</a>
             </address>
-        </div>
-        <div class="contact-info">
-            <ul>
-                <li>
-                    GitHub: <a href="">GitHub</a>
-                </li>
-                <li>
-                    Spotify: <a href="">Spotify</a>
-                </li>
-            </ul>
+            <div class="contact-info">
+                <ul>
+                    <li>
+                        GitHub: <a href="">GitHub</a>
+                    </li>
+                    <li>
+                        Spotify: <a href="">Spotify</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
     <footer>
