--- a/index.html
+++ b/index.html
@@ -4,104 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style.css" >
-    <title>Michael Edeza-Salvant</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./assets/css/style.css"
 </head>
 <body>
     <header>
-        <h1>Welcome to the Party!</h1>
-        <nav>
-            <ul>
-                <!-- links to sections; about me, work/projects, contact info -->
-                <li>
-                    <a href="#about-me">About Me</a>
-                </li>
-                <li>
-                    <a href="#the-work">The Work</a>
-                </li>
-                <li>
-                    <a href="#contact-info">Contact Info</a>
-                </li>
-            </ul>
-        </nav>
+
     </header>
-
-    <div class="hero"></div>
-
-    <section class="about-me, section-title">
-        <div class="am-title">
-            <h2>About Me</h2>
-        </div>
-        <div class="about-me-bio">
-            <h3>Michael Edeza-Salvant</h3>
-                <p>
-                    Hi! I currently work as a Kindergarten Teacher in Oakland, California. At this time I am learning the fundamentals of becoming a fullstack web-designer learning skills in html and css. Alongside many other languages that will prepare me for work in the future. Thanks for stopping by!
-                </p>
-        </div>
-        <!-- <div class="bio-img">
-            <img src="./assets/images/FullSizeRender.jpg" alt="Michael wearing a Yankees hat" />
-        </div> -->
-        </section>
-    <section class="the-work, section-title">
-        <div class="">
-            <h2>The Work</h2>
-        </div>
-        <div class="projects">
-            <article class="project">
-                <div class="app-bio">
-                    <h3>Run Buddy</h3>
-                    <h4>Languge</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque aliquid quas voluptatibus asperiores nostrum expedita veritatis nemo maiores blanditiis consequuntur! Assumenda magnam doloribus autem hic est modi delectus veritatis? Exercitationem.</p>
-                </div>
-            </article>
-            <article class="project">
-                <div class="app-bio">
-                    <h3>Robot Gladiators</h3>
-                    <h4>Languge</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil praesentium cumque, fugiat expedita iure qui est ab. Consequuntur officiis, ratione nulla fugit aliquam laudantium, quasi sit id quaerat doloremque error?</p>
-                </div>
-            </article>
-            <article class="project">
-                <div class="app-bio">
-                    <h3>Project Name-3</h3>
-                    <h4>Languge</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam magnam quae debitis sed temporibus. Quidem ipsam sequi reprehenderit ducimus saepe cum doloribus, asperiores officiis architecto molestiae hic impedit pariatur modi.</p>
-                </div>
-            </article>
-        </div>
-    </section>
-    <section class="contact, section-title">
-        <div>
-            <h2>Reach Me</h2>
-        </div>
-        <div class="contact-info">
-            <h3>Michael Edeza-Salvant</h3>
-            <address>
-                Phone: 999.999.9999 <br/> <br/>
-                Email: <a href="mailto:edezamichael@gmail.com">edezamichael@gmail.com</a>
-            </address>
-            <div class="contact-info">
-                <ul>
-                    <li>
-                        GitHub: <a href="">GitHub</a>
-                    </li>
-                    <li>
-                        Spotify: <a href="">Spotify</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
-    <footer>
-        <h2>Out here doing the thing</h2>
-        <div>
-            &copy; 2022 3leches Coding
-        </div>
-    </footer>
-    <!-- clicking on links work -->
-    <!-- include animations such as hover, and on click type functions -->
-    <!-- clicking on items, they grow to be bigger than the other items -->
-    <!-- Resize the page on various devices and should still work -->
     
 </body>
 </html>
