--- a/index.html
+++ b/index.html
@@ -9,8 +9,51 @@
 </head>
 <body>
     <header>
-
+        <div id="name">
+            <h1>Michael Edeza-Salvant</h1>
+        </div>
+        <div id="nav-bar">
+            <nav>
+                <ul>
+                    <!-- About Them, their work, and how to contact -->
+                    <li>
+                        <a href="#About-Me">About Me</a>
+                    </li>
+                    <li>
+                       <a href="#Projects">Projects</a>
+                    </li>
+                    <li>
+                        <a href="#Contact">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
+    
+    <main>
+        <section class="About-Me">
+            <div class="bio">
+                <h2>Meet Michael</h2>
+                <p>Hey! I am Michael Edeza-Salvant, currently a Kindergarten Teacher in the Bay Area. 
+                I am enrolled in a Coding BootCamp, where I am learning the skills to become a web-developer. 
+                As I progress I hope to combine my two interest together and get an opportunity to work in edTech. 
+                </br> Thank you for stopping by, if there are any questions please reach out!</p>
+            </div>
+
+        </section>
+
+        <section class="Projects">
+
+        </section>
+
+        <section class="Contact">
+
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
