--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="name">
             <h1>Michael Edeza-Salvant</h1>
         </div>
-        <div>
+        <div class="nav">
             <nav>
                 <ul>
                     <!-- About Them, their work, and how to contact -->
@@ -32,7 +32,7 @@
     
     <main>
         <section id="About-Me">
-            <div>
+            <div class=" flex-row">
                 <h2 class="section-title">
                     About Me
                 </h2>
@@ -48,7 +48,7 @@
         </section>
 
         <section id="Projects">
-            <div>
+            <div class=" flex-row">
                 <h2 class="section-title">
                     Projects
                 </h2>
@@ -79,31 +79,47 @@
         </section>
 
         <section id="Contact">
-            <div>
-                <h2 class="section-title">
-                    Contact
-                </h2>
+            <div class="contact-box" class="flex-row">
+                <div class=" flex-row">
+                    <h2 class="section-title">
+                        Contact
+                    </h2>
+                </div>
+                <div class="contact-info" class="flex-row">
+                    <address>
+                        Bay Area, California
+                        <br/>
+                        P: 831-578-8798
+                        <br/>
+                        E:<a href="mailto:edezamicahel@gmail.com">edezamicahel@gmail.com</a>
+                    </address>
+                </div>
+                <div class="social-media">
+                    <div class="social-media-btn">
+                        <div class="social-media-logo">
+                            <img src="./assets/images/iconmonstr-twitter-4-240.png" alt="Twitter Logo">
+                        </div>
+                        <h3>Twitter</h3>
+                    </div>
+                    <div class="social-media-btn">
+                        <div class="social-media-logo">
+                            <img src="./assets/images/iconmonstr-instagram-11-240.png" alt="Instagram Logo">
+                        </div>
+                        <h3>Instagram</h3>
+                    </div>
+                    <div class="social-media-btn">
+                        <div class="social-media-logo">
+                            <img src="./assets/images/iconmonstr-github-1-240.png" alt="GitHub Logo">
+                        </div>
+                        <h3>GitHub</h3>
+                    </div>
+                </div>
+                <div class="music">
+                    <h3>What I'm listening to!</h3>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EUMDoJuT8yJsl?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                </div>
             </div>
-            <div class="contact-info">
-                <address>
-                    Bay Area, California
-                    <br/>
-                    P: 831-578-8798
-                    <br/>
-                    E: <a href="mailto:edezamicahel@gmail.com">edezamicahel@gmail.com</a>
-                </address>
-            </div>
-            <div class="social-media">
-                <h3>Twitter</h3>
-                <h3>Instagram</h3>
-                <h3>GitHub</h3>
-            </div>
-            <div class="music">
-                <h3>What I'm listening to!</h3>
-                <h4>Spotify</h4>
-            </div>
-
-        </section>
+            </section>
     </main>
 
     <footer>
