--- a/index.html
+++ b/index.html
@@ -85,15 +85,8 @@
                         Contact
                     </h2>
                 </div>
-                <div class="contact-info" class="flex-row">
-                    <address>
-                        Bay Area, California
-                        <br/>
-                        P: 831-578-8798
-                        <br/>
-                        E:<a href="mailto:edezamicahel@gmail.com">edezamicahel@gmail.com</a>
-                    </address>
-                </div>
+                <!-- <div class="contact-info" class="flex-row">
+                </div> -->
                 <div class="social-media">
                     <div class="social-media-btn">
                         <div class="social-media-logo">
@@ -121,10 +114,11 @@
             </div>
             </section>
     </main>
-
-    <footer>
-        <img src="./assets/images/3 Leches Logo (1080 x 1080 px).png"
-    </footer>
-    
+<footer>
+    <h2>3 Leches LLC.</h2>
+    <div class="leches-img">
+        <img src="./assets/images/3 Leches Logo.png" alt="3 Leches Logo">
+    </div>
+</footer>
 </body>
 </html>
