--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             </div>
             <div class="bio">
                 <h3>Meet Michael</h3>
-                <p>Hey! I am Michael Edeza-Salvant, currently a Kindergarten Teacher in the Bay Area. 
-                I am enrolled in a Coding BootCamp, where I am learning the skills to become a web-developer. 
-                As I progress I hope to combine my two interest together and get an opportunity to work in edTech. 
-                </br> Thank you for stopping by, if there are any questions please reach out!</p>
+                <p>Hey! I am Michael Edeza-Salvant, currently a Kindergarten Teacher in the Bay Area. </br>
+                I am enrolled in a Coding BootCamp, where I am learning the skills to become a web-developer. </br> 
+                As I progress I hope to combine my two interest together and get an opportunity to work in edTech. </br> 
+                Thank you for stopping by, if there are any questions please reach out!</p>
             </div>
 
         </section>
@@ -85,8 +85,23 @@
                         Contact
                     </h2>
                 </div>
-                <!-- <div class="contact-info" class="flex-row">
-                </div> -->
+                <div class="music" class="flex-row">
+                    <h3>What I'm listening to!</h3>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EUMDoJuT8yJsl?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                </div>
+                <div class="my-info">
+                    <h3>
+                        My Info
+                    </h3>
+                    <p>
+                        Thank you so much for visiting, if there are any questions please do not hesitate to reach out.
+                    </br>
+                        Phone: 831-578-8798 
+                    </br>
+                    </br>
+                        Email: <a href="mailto:edezamichael@gmail.com">edezamichael@gmail.com</a>
+                    </p>
+                </div>
                 <div class="social-media">
                     <div class="social-media-btn">
                         <div class="social-media-logo">
@@ -107,18 +122,12 @@
                         <h3>GitHub</h3>
                     </div>
                 </div>
-                <div class="music">
-                    <h3>What I'm listening to!</h3>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EUMDoJuT8yJsl?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                </div>
             </div>
             </section>
     </main>
 <footer>
-    <h2>3 Leches LLC.</h2>
-    <div class="leches-img">
-        <img src="./assets/images/3 Leches Logo.png" alt="3 Leches Logo">
-    </div>
+    <h2>Michael Edeza-Salvant</h2>
+    <p>&copy; 2021 3 Leches LLC.</p>
 </footer>
 </body>
 </html>
