--- a/index.html
+++ b/index.html
@@ -31,18 +31,23 @@
     </header>
     
     <main>
-        <section id="About-Me">
+        <section id="About-Me" >
             <div class=" flex-row">
                 <h2 class="section-title">
                     About Me
                 </h2>
             </div>
-            <div class="bio">
-                <h3>Meet Michael</h3>
-                <p>Hey! I am Michael Edeza-Salvant, currently a Kindergarten Teacher in the Bay Area. </br>
-                I am enrolled in a Coding BootCamp, where I am learning the skills to become a web-developer. </br> 
-                As I progress I hope to combine my two interest together and get an opportunity to work in edTech. </br> 
-                Thank you for stopping by, if there are any questions please reach out!</p>
+            <div class="about-me-box">
+                <div class="bio">
+                    <h3>Meet Michael</h3>
+                    <p>Hey! I am Michael Edeza-Salvant, currently a Kindergarten Teacher in the Bay Area. 
+                    I am enrolled in a Coding BootCamp, where I am learning the skills to become a web-developer.  
+                    As I progress I hope to combine my two interest together and get an opportunity to work in edTech. 
+                    Thank you for stopping by, if there are any questions please reach out!</p>
+                </div>
+                <div class="ME">
+                    <img src="./assets/images/IMG_5209.JPG" alt="">
+                </div>
             </div>
 
         </section>
@@ -79,51 +84,51 @@
         </section>
 
         <section id="Contact">
-            <div class="contact-box" class="flex-row">
-                <div class=" flex-row">
-                    <h2 class="section-title">
-                        Contact
-                    </h2>
-                </div>
-                <div class="music" class="flex-row">
-                    <h3>What I'm listening to!</h3>
+            <div class="flex-row">
+                <h2 class="section-title">
+                    Contact
+                </h2>
+            </div>
+            <div class="contact-box">
+                <div class="music">
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EUMDoJuT8yJsl?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 </div>
                 <div class="my-info">
-                    <h3>
-                        My Info
-                    </h3>
-                    <p>
-                        Thank you so much for visiting, if there are any questions please do not hesitate to reach out.
-                    </br>
-                        Phone: 831-578-8798 
-                    </br>
-                    </br>
-                        Email: <a href="mailto:edezamichael@gmail.com">edezamichael@gmail.com</a>
-                    </p>
+                        <h3>
+                            My Info
+                        </h3>
+                        <p>
+                            Thank you so much for visiting, if there are any questions please do not hesitate to reach out.
+                        </p>
+                        <address>
+                        </br>
+                            Phone: 831-578-8798 
+                        </br>
+                            Email: <a href="mailto:edezamichael@gmail.com">edezamichael@gmail.com</a>
+                        </address>
                 </div>
                 <div class="social-media">
-                    <div class="social-media-btn">
-                        <div class="social-media-logo">
-                            <img src="./assets/images/iconmonstr-twitter-4-240.png" alt="Twitter Logo">
+                        <div class="social-media-btn">
+                            <div class="social-media-logo">
+                                <img src="./assets/images/iconmonstr-twitter-4-240.png" alt="Twitter Logo">
+                            </div>
+                            <h3>Twitter</h3>
                         </div>
-                        <h3>Twitter</h3>
-                    </div>
-                    <div class="social-media-btn">
-                        <div class="social-media-logo">
-                            <img src="./assets/images/iconmonstr-instagram-11-240.png" alt="Instagram Logo">
+                        <div class="social-media-btn">
+                            <div class="social-media-logo">
+                                <img src="./assets/images/iconmonstr-instagram-11-240.png" alt="Instagram Logo">
+                            </div>
+                            <h3>Instagram</h3>
                         </div>
-                        <h3>Instagram</h3>
-                    </div>
-                    <div class="social-media-btn">
-                        <div class="social-media-logo">
-                            <img src="./assets/images/iconmonstr-github-1-240.png" alt="GitHub Logo">
+                        <div class="social-media-btn">
+                            <div class="social-media-logo">
+                                <img src="./assets/images/iconmonstr-github-1-240.png" alt="GitHub Logo">
+                            </div>
+                            <h3>GitHub</h3>
                         </div>
-                        <h3>GitHub</h3>
-                    </div>
                 </div>
             </div>
-            </section>
+        </section>
     </main>
 <footer>
     <h2>Michael Edeza-Salvant</h2>
