--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
                 </h2>
             </div>
             <div class="container">
-                
-                <div class="p-card">
-                    <article id="run-buddy">
-                        <h3>Run Buddy</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius error quibusdam, illum modi ipsam repellendus ab totam nemo voluptatibus? Itaque laborum temporibus vitae illum eum, velit assumenda perferendis! Aperiam, earum.</p>
-                    </article>
-                </div>
+                <a href="https://edeza-michael.github.io/run-buddy/">
+                    <div class="p-card">
+                        <article id="run-buddy">
+                            <h3>Run Buddy</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius error quibusdam, illum modi ipsam repellendus ab totam nemo voluptatibus? Itaque laborum temporibus vitae illum eum, velit assumenda perferendis! Aperiam, earum.</p>
+                        </article>
+                    </div>
+                </a>
          
                 <div class="p-card">
                     <article id="robot-gladiators">
@@ -111,19 +112,25 @@
                 <div class="social-media">
                         <div class="social-media-btn">
                             <div class="social-media-logo">
-                                <img src="./assets/images/iconmonstr-twitter-4-240.png" alt="Twitter Logo">
+                                <a href="https://twitter.com/medeza_salvant">
+                                    <img src="./assets/images/iconmonstr-twitter-4-240.png" alt="Twitter Logo">
+                                </a>
                             </div>
                             <h3>Twitter</h3>
                         </div>
                         <div class="social-media-btn">
                             <div class="social-media-logo">
-                                <img src="./assets/images/iconmonstr-instagram-11-240.png" alt="Instagram Logo">
+                                <a href="https://www.instagram.com/miguel3leches/">
+                                    <img src="./assets/images/iconmonstr-instagram-11-240.png" alt="Instagram Logo">
+                                </a>
                             </div>
                             <h3>Instagram</h3>
                         </div>
                         <div class="social-media-btn">
                             <div class="social-media-logo">
-                                <img src="./assets/images/iconmonstr-github-1-240.png" alt="GitHub Logo">
+                                <a href="https://github.com/edeza-michael">
+                                    <img src="./assets/images/iconmonstr-github-1-240.png" alt="GitHub Logo">
+                                </a>
                             </div>
                             <h3>GitHub</h3>
                         </div>
@@ -133,7 +140,7 @@
     </main>
 <footer>
     <h2>Michael Edeza-Salvant</h2>
-    <p>&copy; 2021 3 Leches LLC.</p>
+    <p>&copy; 2022 3 Leches LLC.</p>
 </footer>
 </body>
 </html>
